--- a/sunabako/Cargo.toml
+++ b/sunabako/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+github-rs = "0.7"
